--- a/index.html
+++ b/index.html
@@ -1,6 +1,163 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        hello world
-    </body>
+<head>
+        <!-- 
+            Author: janpul
+            Date: September 18, 2023
+            JavaScript
+
+            Made possible with Bootstrap.
+         -->
+    <title>UST Freedom Wall</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .main-content {
+            padding: 20px;
+            margin: 20px;
+        }
+
+        .bg-default {
+            background-color: #f5f8fa;
+        }
+
+        .bg-yellow {
+            background-color: #ffdf00;
+        }
+
+        .bg-green {
+            background-color: #2ecc71;
+            color: white;
+        }
+
+        .bg-blue {
+            background-color: #3498db;
+            color: white;
+        }
+
+        .submission {
+            border: 1px solid #e1e8ed;
+            border-radius: 5px;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+
+        .time-stamp {
+            font-size: 12px;
+        }
+
+        .submission img {
+            max-width: 200px; 
+            max-height: 200px;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body>
+    <!-- Added 'cpntainer' for Responsive Design for Mobile -->
+    <div class="container"> 
+
+    <!-- Information Alert -->
+    <div class="alert alert-info main-content">
+        <i class="bi bi-info-circle-fill"></i> Information submitted on this page is saved only on this webpage.
+    </div>
+    
+    <!-- Submission Form -->
+    <div id="formSection" class="main-content">
+        <h1><i class="bi bi-pencil-square"></i> UST Freedom Wall</h1>
+        <p>Have something in your mind? Share it with the UST Community!</p>
+        
+        <form id="infoForm" enctype="multipart/form-data">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" class="form-control" required><br>
+
+            <label for="username">Username:</label>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">@</span>
+                </div>
+                <input type="text" id="username" name="username" class="form-control" required>
+            </div><br>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" class="form-control" rows="4" required></textarea><br>
+
+            <!-- Add an image upload field -->
+            <label for="image">Upload Image:</label>
+            <input type="file" id="image" name="image" accept="image/*" class="form-control"><br>
+
+
+            <!-- Add a color picker -->
+            <label for="color">Choose Background Color:</label>
+            <select id="color" name="color" class="form-control">
+                <option value="bg-default">Default</option>
+                <option value="bg-yellow">Yellow</option>
+                <option value="bg-green">Green</option>
+                <option value="bg-blue">Blue</option>
+            </select><br>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <br /><hr />
+    </div>
+    <!-- Submissions -->
+    <div id="submittedSection" class="main-content">
+        <h1><i class="bi bi-journals"></i> Public Submissions</h1>
+        <br />
+    </div>
+    </div>
+
+    <script>
+        // Function to handle form submission
+        function handleSubmit(event) {
+            event.preventDefault();
+
+            // Get form values
+            const name = document.getElementById('name').value;
+            const username = document.getElementById('username').value;
+            const message = document.getElementById('message').value;
+            const selectedColor = document.getElementById('color').value;
+            const imageFile = document.getElementById('image').files[0];
+
+            // Shows the Submission after Submission
+            const newSubmission = document.createElement('div');
+            newSubmission.className = `submission ${selectedColor}`;
+            newSubmission.innerHTML = `
+                <b>${name}</b> (@${username}) submitted:
+                <div>${message}</div>
+                <div class="time-stamp">${getCurrentTimeStamp()}</div>
+            `;
+
+            // Display the uploaded image
+            if (imageFile) {
+                const img = document.createElement('img');
+                img.src = URL.createObjectURL(imageFile);
+                img.alt = 'Uploaded Image';
+                newSubmission.appendChild(img);
+            }
+
+            // Function to get the current timestamp
+        function getCurrentTimeStamp() {
+            const now = new Date();
+            const date = now.toLocaleDateString();
+            const time = now.toLocaleTimeString();
+            return `${date} ${time}`;
+        }
+
+            // Add the new submission to the submitted section
+            const submittedSection = document.getElementById('submittedSection');
+            submittedSection.appendChild(newSubmission);
+
+            // Clear the form fields
+            document.getElementById('name').value = '';
+            document.getElementById('username').value = '';
+            document.getElementById('message').value = '';
+            document.getElementById('color').value = '';
+            document.getElementById('image').value = '';
+        }
+
+        // Add form submission event listener
+        document.getElementById('infoForm').addEventListener('submit', handleSubmit);
+    </script>
+</body>
 </html>
