Updated the code

--- a/index.html
+++ b/index.html
@@ -10,41 +10,14 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">PayYoTicket!</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-            <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">FAQs</a>
-        <li class="nav-item">
-            <a class="nav-link" href="contact.php">Contact</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-        </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="pt-5">
-  <h4 class="text-center empsmall">Filipino Drivers, say hello to...</h1>
+<div class="container pt-5">
+  <h4 class="text-center empsmall">Sending this to my baby...</h1>
   <h1 class="text-center emptext" id="typing-animation"></h1>
-
-  <div class="container pt-1">
-  <p class="text-center">PayYoTicket is the latest innovative system designed to streamline the process for traffic violators to make payments for their violations.
-    This system aims to reduce the hassle and time-consuming traditional methods of payment, providing a user-friendly online platform where violators can quickly and securely pay their fines.</p>
-</div>
 </div>
 
 <script>
     // Typing animation
-    var text = "Sorry baby nagcocode ako, wait lang ha.";
+    var text = "Sorry baby nagcocode ako, wait lang ha.. I love you!";
     var index = 0;
     var speed = 95; // Adjust the speed of typing animation (in milliseconds)
 
