--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 <div class="container pt-5">
-  <h4 class="text-center empsmall">Sending this to my baby...</h1>
+  <h4 class="text-center empsmall">Hey Visitor! Get ready as we go...</h1>
   <h4 class="text-center emptext" id="typing-animation"></h4>
 </div>
 
 <script>
-  var texts = ["Inaantok ka na ba..??", "Ako din e hahahaha sorry..", "tulog na ko, bye I love you!!"];
+  var texts = ["Along this journey together!", "Coming Soon..", "The Newest Collaboration is on its Way!", "Sorry baby nagcocode ako, wait lang ha.. I love you!!"];
   var textIndex = 0;
   var charIndex = 0;
   var speed = 100;
